--- a/antoryum_gayrimenkul/www/contact.html
+++ b/antoryum_gayrimenkul/www/contact.html
@@ -134,4 +134,6 @@
 <script>
 	{% include "templates/includes/contact.js" %}
 </script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRWpF-ujlIYcEUMMZct_rk-iqf5MKZQq4&callback=initMap"></script>
+<script src="/assets/antoryum_gayrimenkul/js/map-single.js"></script>
 {% endblock %}
