--- a/antoryum_gayrimenkul/www/contact.html
+++ b/antoryum_gayrimenkul/www/contact.html
@@ -1,4 +1,5 @@
 {% extends "templates/web.html" %}
+{% block title %}{{ _(title) or _("İletişim") }}{% endblock %}
 
 {% block header %}
 <section class="hidden-section single-par2  " data-scrollax-parent="true">
