--- a/antoryum_gayrimenkul/antoryum_gayrimenkul/web_template/antoryum_about_section/antoryum_about_section.html
+++ b/antoryum_gayrimenkul/antoryum_gayrimenkul/web_template/antoryum_about_section/antoryum_about_section.html
@@ -91,7 +91,7 @@
                         <img src="{{ about_image }}" class="respimg" alt="">
                         {% endif %}
                         <div class="about-img-hotifer color-bg">
-                            <p>{{ _(slogan) }}</p>
+                            <p class="antoryum-slogan">{{ _(slogan) }}</p>
                             <h5 style="color: white;">{{ _(slogan_subtitle) }}</h5>
                         </div>
                     </div>
