--- a/antoryum_gayrimenkul/antoryum_gayrimenkul/web_template/antoryum_team/antoryum_team.html
+++ b/antoryum_gayrimenkul/antoryum_gayrimenkul/web_template/antoryum_team/antoryum_team.html
@@ -29,7 +29,7 @@
             <div class="geodir-category-content fl-wrap">
                 <div class="agent_card-title fl-wrap">
                     <h4><a href="#" >{{ broker.full_name }}</a></h4>
-                    <h5><a href="#">{{ broker.info }}</a></h5>
+                    <h5><a href="#">{{ _(broker.info) }}</a></h5>
                 </div>
                 <div class="geodir-category-footer fl-wrap">
                     <a href="mailto:{{ user.email }}" class="tolt ftr-btn" data-microtip-position="left" data-tooltip="{{ _('Mesaj Gönder') }}"><i class="fal fa-envelope"></i></a>
